fix(select): hide notch cutout if no visible label provided (#27649)

--- a/core/src/components/select/select.scss
+++ b/core/src/components/select/select.scss
@@ -316,7 +316,8 @@ button {
  * then the element should be hidden otherwise
  * there will be additional margins added.
  */
-.label-text-wrapper-hidden {
+.label-text-wrapper-hidden,
+.select-outline-notch-hidden {
   display: none;
 }
 
